<telegram_channels xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <channel>
        <title stringRes="@string/default_channel_1_title">aljazeeraenglishnews</title>
        <url>https://tg.ceno.app/en/aljazeeraenglishnews/</url>
    </channel>

    <!-- IR -->
    <channel>
        <title stringRes="@string/default_channel_1_title_ir">bbcpersion</title>
        <url>https://tg.ceno.app/ir/bbcpersian/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_2_title_ir">euronewspe</title>
        <url>https://tg.ceno.app/ir/euronewspe/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_3_title_ir">Farsi_Iranwire</title>
        <url>https://tg.ceno.app/ir/Farsi_Iranwire/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_4_title_ir">Hengaw_Org</title>
        <url>https://tg.ceno.app/ir/Hengaw_Org/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_5_title_ir">hranews</title>
        <url>https://tg.ceno.app/ir/hranews/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_6_title_ir">IranintlTV</title>
        <url>https://tg.ceno.app/ir/IranintlTV/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_7_title_ir">ManotoTV</title>
        <url>https://tg.ceno.app/ir/ManotoTV/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_8_title_ir">paskoocheh</title>
        <url>https://tg.ceno.app/ir/paskoocheh/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_9_title_ir">radiofarda</title>
        <url>https://tg.ceno.app/ir/>radiofarda/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_10_title_ir">tavaanatech</title>
        <url>https://tg.ceno.app/ir/tavaanatech/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_11_title_ir">VahidOnline</title>
        <url>https://tg.ceno.app/ir/VahidOnline/</url>
    </channel>

    <!-- RU -->
    <channel>
        <title stringRes="@string/default_channel_1_title_ru">agentstvonews</title>
        <url>https://tg.ceno.app/ru/agentstvonews/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_2_title_ru">ArkHelps</title>
        <url>https://tg.ceno.app/ru/ArkHelps/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_3_title_ru">asiansofrussia</title>
        <url>https://tg.ceno.app/ru/asiansofrussia/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_4_title_ru">cenochannel</title>
        <url>https://tg.ceno.app/ru/cenochannel/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_5_title_ru">CorruptionTV</title>
        <url>https://tg.ceno.app/ru/CorruptionTV/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_6_title_ru">deptone</title>
        <url>https://tg.ceno.app/ru/deptone/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_7_title_ru">eschulmann</title>
        <url>https://tg.ceno.app/ru/eschulmann/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_8_title_ru">femagainstwar</title>
        <url>https://tg.ceno.app/ru/femagainstwar/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_9_title_ru">freeburyatiafoundation</title>
        <url>https://tg.ceno.app/ru/freeburyatiafoundation/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_10_title_ru">iditelesom_help</title>
        <url>https://tg.ceno.app/ru/iditelesom_help/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_11_title_ru">kedr_media</title>
        <url>https://tg.ceno.app/ru/kedr_media/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_12_title_ru">kosa_media</title>
        <url>https://tg.ceno.app/ru/kosa_media/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_13_title_ru">meduzalive</title>
        <url>https://tg.ceno.app/ru/meduzalive/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_14_title_ru">no_torture</title>
        <url>https://tg.ceno.app/ru/no_torture/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_15_title_ru">novaya_pishet</title>
        <url>https://tg.ceno.app/ru/novaya_pishet/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_16_title_ru">ovdinfo</title>
        <url>https://tg.ceno.app/ru/ovdinfo/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_17_title_ru">parniplus_com</title>
        <url>https://tg.ceno.app/ru/parniplus_com/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_18_title_ru">peaceplea</title>
        <url>https://tg.ceno.app/ru/peaceplea/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_19_title_ru">russianlgbtnet</title>
        <url>https://tg.ceno.app/ru/russianlgbtnet/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_20_title_ru">spherequeer</title>
        <url>https://tg.ceno.app/ru/spherequeer/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_21_title_ru">truestorymedia</title>
        <url>https://tg.ceno.app/ru/truestorymedia/</url>
    </channel>
    <channel>
        <title stringRes="@string/default_channel_22_title_ru">zatelecom</title>
        <url>https://tg.ceno.app/ru/zatelecom/</url>
    </channel>
</telegram_channels>
